CHATS_SIT/force-app/main/default/objects/T_CCCAP_CONTACT__c.object
<CustomObject>
    <fields>
        <fullName>EMAIL__c</fullName>
        <description>Email</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>       
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>CCCAP Contacts</relationshipLabel>
        <relationshipName>CCCAP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <description>First Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <description>Last Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_FAX__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_CELL__c</fullName>
         <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_FAC__c</fullName>
        <description>Phone</description>
        <label>Facility Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_HOME__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TXT_ROLE__c</fullName>
        <description>Role</description>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CCCAP Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCCAP Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cell_Phone_Must_be_10_Digits</fullName>
        <active>true</active>
        <description>Cell Phone must be 10 digits</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_CELL__c)),LEN(NBR_PHONE_CELL__c) != 10)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_CELL__c</errorDisplayField>
        <errorMessage>Cell Phone must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Facility_Phone_must_of_10_digits</fullName>
        <active>true</active>
        <description>Facility Phone must be 10 digits</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_FAC__c)),LEN(NBR_PHONE_FAC__c) != 10)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_FAC__c</errorDisplayField>
        <errorMessage>Facility Phone must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_must_be_10_digits</fullName>
        <active>true</active>
        <description>Fax Number must be 10 digits</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_FAX__c)),LEN(NBR_FAX__c) != 10)</errorConditionFormula>
        <errorDisplayField>NBR_FAX__c</errorDisplayField>
        <errorMessage>Fax Number must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_must_be_10_digits</fullName>
        <active>true</active>
        <description>Home Phone must be 10 digits</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_HOME__c)),LEN(NBR_PHONE_HOME__c)!=10)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_HOME__c</errorDisplayField>
        <errorMessage>Home Phone must be 10 digits</errorMessage>
    </validationRules>
</CustomObject>