CHATS_SIT/force-app/main/default/objects/T_CCCAP_CONTACT__c/validationRules/Facility_Phone_must_of_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Facility_Phone_must_of_10_digits</fullName>
    <active>true</active>
    <description>Facility Phone must be 10 digits</description>
    <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_FAC__c)),LEN(NBR_PHONE_FAC__c) != 10)</errorConditionFormula>
    <errorDisplayField>NBR_PHONE_FAC__c</errorDisplayField>
    <errorMessage>Facility Phone must be 10 digits</errorMessage>
</ValidationRule>