CHATS_SIT/force-app/main/default/objects/T_CCCAP_CONTACT__c/validationRules/Fax_Number_must_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Number_must_be_10_digits</fullName>
    <active>true</active>
    <description>Fax Number must be 10 digits</description>
    <errorConditionFormula>AND(NOT(ISBLANK(NBR_FAX__c)),LEN(NBR_FAX__c) != 10)</errorConditionFormula>
    <errorDisplayField>NBR_FAX__c</errorDisplayField>
    <errorMessage>Fax Number must be 10 digits</errorMessage>
</ValidationRule>