CHATS_SIT/force-app/main/default/objects/T_CCCAP_CONTACT__c/validationRules/Home_Phone_must_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Phone_must_be_10_digits</fullName>
    <active>true</active>
    <description>Home Phone must be 10 digits</description>
    <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_HOME__c)),LEN(NBR_PHONE_HOME__c)!=10)</errorConditionFormula>
    <errorDisplayField>NBR_PHONE_HOME__c</errorDisplayField>
    <errorMessage>Home Phone must be 10 digits</errorMessage>
</ValidationRule>