CHATS_SIT/force-app/main/default/objects/T_CCCAP_CONTACT__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EMAIL__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>